--- a/casestudy.html
+++ b/casestudy.html
@@ -231,6 +231,59 @@
       </div>
 </div>
 
+<div class="container">
+  <h2 class="text-center fw-bold">Mid-Fi Prototype & User Testing</h2>
+      <div class="text-center">
+        <img src="/images/digital-wireframe.png" class="img-fluid">
+      </div>
+</div>
+
+<div class="container">
+<p class="text-center">We decided to make the <b>Festa countdown our showstoppper feature,</b> as well as an added image coursel in the hero section. 
+We also began to add features such as apple pay to mobile to give users a more secure checkout</p>
+<div class="div">
+  <img class="img-fluid" src="/images/user-test-desktop.gif">
+</div>
+<p class="text-center">Our user testing focused on making sure the <b>basic tasks of the webpage could be done with ease.</b> Users were asked to navigate through the checkout process and locate 
+  information about other Italian clubs, they were all <b>succesful in doing so without asking further questions.</b> We were also able to contact the head of Festa and ask for his 
+  feedback, he expressed that he really liked the new layout but expressed he would need help building the webpage</p>
+</div>
+
+<div class="container">
+  <h2 class="text-center fw-bold">Wireframe Sketches</h2>
+      <div class="text-center">
+        <img src="/images/ui-style-guide.png" class="img-fluid">
+      </div>
+  <p class="text-center">We spoke cloesly with the current web manager at Festa. We decided on a color pallete that is <b>accesible but also reflects the italian culture and roots.</b>
+    We were also given some images to work with from previous Festas.</p>
+</div>
+
+<div class="container">
+  <div class="row">
+  <div class="container col-lg-6 col-md-6 col-sm-12">
+    <div class="text-section">
+      <div class="text-content">
+          <h2 class="text-center fw-bold">A.</h2>
+          <img class="img-fluid" src="/images/prototype-a.png">
+        </div>
+      </div>
+  </div>
+
+  <div class="container col-lg-6 col-md-6 col-sm-12">
+    <div class="text-section">
+      <div class="text-content">
+        <h2 class="text-center fw-bold">B.</h2>
+        <img class="img-fluid" src="/images/prototype-b.png">
+        </div>
+      </div>
+  </div>
+  </div>
+  <p class="text-center">Our team came down to two different design ideas, one with a <b>solid color background and the other with color blocking and white space.</b> A and B also feature <b>headers with 
+    differnt icons and fonts,</b> we asked users which they perfered. <b>Users perfered designs B’s clean look,</b> they liked the modern looking icons for mobile along with the added 
+    whitespace.  <b>Althougth they pereferd the personality of the countdown timer and font used in deisgn A more.</b> We met both our users needs by <b>combining the best elements of 
+    both designs</b> into our final prototype.</p>
+</div>
+
       <div class="container">
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">Copyright&copy;  2022</p>
