--- a/casestudy.html
+++ b/casestudy.html
@@ -284,6 +284,27 @@ We also began to add features such as apple pay to mobile to give users a more s
     both designs</b> into our final prototype.</p>
 </div>
 
+<div class="container">
+  <h2 class="text-center fw-bold">Hi-Fidelity-Prototype</h2>
+  <div class="row">
+  <div class="images text-center">
+      <img src="/images/hi-fi-desktop.png" class="img-fluid">
+      <img src="/images/hi-fi-mobile.png" class="img-fluid">
+      <img src="/images/hi-fi-protoype-live.gif" class="img-fluid">
+  </div>
+  </div>
+</div>
+
+<div class="container">
+  <h2 class="text-center fw-bold">Final Thoughts & Future Opportunities</h2>
+  <p class="text-center">This was an informative and engaging experience for all of us as UX/UI designers. We had the great opportunity to work closely with the 
+  stakeholders of Festa Italiana and would like to continue this project in the future.</p>
+  <br>
+  <p class="text-center">
+    The main constraint moving forward with development is budget and current knowledge. Festa is a non-profit with a small budget for their website, we will need to code 
+    something on our own that would be manageable by them to update and maintain. </p>
+</div>
+
       <div class="container">
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">Copyright&copy;  2022</p>
