--- a/casestudy.html
+++ b/casestudy.html
@@ -123,7 +123,7 @@
 </div>
 
 <div class="container">
-  <h2 class="text-center">User Interviews</h2>
+  <h2 class="text-center fw-bold">User Interviews</h2>
   <div class="row">
     <div class="container col-lg-6 col-md-6 col-sm-12">
             <div class="text-section">
