--- a/casestudy.html
+++ b/casestudy.html
@@ -305,6 +305,10 @@ We also began to add features such as apple pay to mobile to give users a more s
     something on our own that would be manageable by them to update and maintain. </p>
 </div>
 
+<div class="text-center">
+  <a class="btn btn-dark btn-lg" href="#" role="button">View Next Case Study</a>
+</div>
+
       <div class="container">
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">Copyright&copy;  2022</p>
