--- a/casestudy.html
+++ b/casestudy.html
@@ -263,6 +263,7 @@ We also began to add features such as apple pay to mobile to give users a more s
 </div>
 
 <div class="container">
+  <h2 class="text-center fw-bold">User Interviews</h2>
   <div class="row">
   <div class="container col-lg-6 col-md-6 col-sm-12">
     <div class="text-section">
