--- a/casestudy.html
+++ b/casestudy.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html"><img src="/images/ED-logo.svg"></a>
+          <a class="navbar-brand" href="index.html"><img src="images/ED-logo.svg"></a>
           <button type="button" class="btn btn-dark">Contact</button>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,8 +42,8 @@
           <h1 class="text-center fw-bold">Festa Italian Non-Profit Redesign</h1>
           <div class="row">
           <div class="images text-center">
-              <img src="/images/Festa-home.png" class="img-fluid">
-              <img src="/images/Festa-mobile.png" class="img-fluid">
+              <img src="images/Festa-home.png" class="img-fluid">
+              <img src="images/Festa-mobile.png" class="img-fluid">
           </div>
           </div>
       </div>
@@ -54,7 +54,7 @@
                     <div class="header-card-content">
                         <h2 class="fw-bold">Role</h2>
                         <h3>UX/UI Designer</h3>
-                        <img src="/images/role-icon.png">
+                        <img src="images/role-icon.png">
                     </div>
                 </div>
 
@@ -62,7 +62,7 @@
                     <div class="header-card-content">
                         <h2 class="fw-bold">Team Size</h2>
                         <h3>Four</h3>
-                        <img src="/images/Team-icon.png">
+                        <img src="images/Team-icon.png">
                     </div>
                 </div>
 
@@ -70,7 +70,7 @@
                     <div class="header-card-content">
                         <h2 class="fw-bold">Duration</h2>
                         <h3>3 Weeks</h3>
-                        <img src="/images/Duration-icon.png">
+                        <img src="images/Duration-icon.png">
                     </div>
                 </div>
 
@@ -78,7 +78,7 @@
                     <div class="header-card-content">
                         <h2 class="fw-bold">Tools</h2>
                         <h3>Figma, Invision, & Miro</h3>
-                        <img src="/images/Tools-icon.png">
+                        <img src="images/Tools-icon.png">
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
   <h2 class="text-center fw-bold">User Persona</h1>
   <div class="row">
   <div class="images text-center">
-      <img src="/images/user-persona.png" class="img-fluid">
+      <img src="images/user-persona.png" class="img-fluid">
   </div>
   </div>
 </div>
@@ -164,14 +164,14 @@
       non-profits to have an offical webpage</b> because Facebook is not as trusted. Since Festa current checkout is a link to a random paypal email this makes potential olive oil 
       customer and donators <b>skeptical of moving forward with their purchase.</b></P>
       <div class="text-center">
-        <img src="/images/user-insights.png" class="img-fluid">
+        <img src="images/user-insights.png" class="img-fluid">
       </div>
 </div>
 
 <div class="container">
   <h2 class="text-center fw-bold">Storyboard</h2>
       <div class="text-center">
-        <img src="/images/storyboard.png" class="img-fluid">
+        <img src="images/storyboard.png" class="img-fluid">
       </div>
 </div>
 
@@ -184,7 +184,7 @@
 <div class="container">
   <h2 class="text-center fw-bold">Current Webpage</h2>
   <div class="text-center">
-  <img class="img-fluid" src="/images/orginal-webpage.png">
+  <img class="img-fluid" src="images/orginal-webpage.png">
   </div>
 </div>
 
@@ -224,21 +224,21 @@
   <h2 class="text-center fw-bold">Sitemap</h2>
     <p class="text-center">We then developed a new sitemap that would make it easy for users to access any information about festa, donate, volunteer, or purchase olive oil securely.</p>
       <div class="text-center">
-        <img src="/images/sitemap.png" class="img-fluid">
+        <img src="images/sitemap.png" class="img-fluid">
       </div>
 </div>
 
 <div class="container">
   <h2 class="text-center fw-bold">Wireframe Sketches</h2>
       <div class="text-center">
-        <img src="/images/wireframe-sketches.png" class="img-fluid">
+        <img src="images/wireframe-sketches.png" class="img-fluid">
       </div>
 </div>
 
 <div class="container">
   <h2 class="text-center fw-bold">Mid-Fi Prototype & User Testing</h2>
       <div class="text-center">
-        <img src="/images/digital-wireframe.png" class="img-fluid">
+        <img src="images/digital-wireframe.png" class="img-fluid">
       </div>
 </div>
 
@@ -246,7 +246,7 @@
 <p class="text-center">We decided to make the <b>Festa countdown our showstoppper feature,</b> as well as an added image coursel in the hero section. 
 We also began to add features such as apple pay to mobile to give users a more secure checkout</p>
 <div class="div">
-  <img class="img-fluid" src="/images/user-test-desktop.gif">
+  <img class="img-fluid" src="images/user-test-desktop.gif">
 </div>
 <p class="text-center">Our user testing focused on making sure the <b>basic tasks of the webpage could be done with ease.</b> Users were asked to navigate through the checkout process and locate 
   information about other Italian clubs, they were all <b>succesful in doing so without asking further questions.</b> We were also able to contact the head of Festa and ask for his 
@@ -256,7 +256,7 @@ We also began to add features such as apple pay to mobile to give users a more s
 <div class="container">
   <h2 class="text-center fw-bold">Wireframe Sketches</h2>
       <div class="text-center">
-        <img src="/images/ui-style-guide.png" class="img-fluid">
+        <img src="images/ui-style-guide.png" class="img-fluid">
       </div>
   <p class="text-center">We spoke cloesly with the current web manager at Festa. We decided on a color pallete that is <b>accesible but also reflects the italian culture and roots.</b>
     We were also given some images to work with from previous Festas.</p>
@@ -269,7 +269,7 @@ We also began to add features such as apple pay to mobile to give users a more s
     <div class="text-section">
       <div class="text-content">
           <h2 class="text-center fw-bold">A.</h2>
-          <img class="img-fluid" src="/images/prototype-a.png">
+          <img class="img-fluid" src="images/prototype-a.png">
         </div>
       </div>
   </div>
@@ -278,7 +278,7 @@ We also began to add features such as apple pay to mobile to give users a more s
     <div class="text-section">
       <div class="text-content">
         <h2 class="text-center fw-bold">B.</h2>
-        <img class="img-fluid" src="/images/prototype-b.png">
+        <img class="img-fluid" src="images/prototype-b.png">
         </div>
       </div>
   </div>
@@ -293,9 +293,9 @@ We also began to add features such as apple pay to mobile to give users a more s
   <h2 class="text-center fw-bold">Hi-Fidelity-Prototype</h2>
   <div class="row">
   <div class="images text-center">
-      <img src="/images/hi-fi-desktop.png" class="img-fluid">
-      <img src="/images/hi-fi-mobile.png" class="img-fluid">
-      <img src="/images/hi-fi-protoype-live.gif" class="img-fluid">
+      <img src="images/hi-fi-desktop.png" class="img-fluid">
+      <img src="images/hi-fi-mobile.png" class="img-fluid">
+      <img src="images/hi-fi-protoype-live.gif" class="img-fluid">
   </div>
   </div>
 </div>
@@ -318,10 +318,10 @@ We also began to add features such as apple pay to mobile to give users a more s
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">Copyright&copy;  2022</p>
             <a href="/">
-                <img src="/images/ED-logo.svg">
+                <img src="images/ED-logo.svg">
             </a>
             <ul class="nav col-md-4 justify-content-end">
-              <li class="nav-item"><a href="https://www.linkedin.com/in/ethandebates/"><img src="/images/LinkedIn-mini.png"></a></li>
+              <li class="nav-item"><a href="https://www.linkedin.com/in/ethandebates/"><img src="images/LinkedIn-mini.png"></a></li>
             </ul>
           </footer>
       </div>
