--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
     <div class="preLoader">
     <div class="disc">
-        <img src="/images/ED-XL.png">
+        <img src="images/ED-XL.png">
     </div>
     </div>
 
 <div class="webpage">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html"><img src="/images/ED-logo.svg"></a>
+          <a class="navbar-brand" href="index.html"><img src="images/ED-logo.svg"></a>
           <button type="button" class="btn btn-dark">Contact</button>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
                     </span> 
             </div>
               <div class="col-lg-4 align-items-center d-flex">
-                <img src="/images/Portrait.png" alt="" class="silly img-fluid">
+                <img src="images/Portrait.png" alt="" class="silly img-fluid">
               </div>
           </div>
           </div>
@@ -79,11 +79,11 @@
             <div class="cs-item col-lg-4 col-md-12 col-sm-12"> 
               <div class="cs-card">
                 <div class="cs-items">
-                  <img src="/images/Festa.png" class="img-fluid" />
+                  <img src="images/Festa.png" class="img-fluid" />
                     <h3>Non-profit Webpage Redesign: Festa Italiana</h3>
                       <p> In this project we focus on a redesign fixing the heuristic issues preventing users from successfully 
                       donating or receiving information regarding Festa Italiana.</p>
-                        <a class="btn btn-outline-light" href="/casestudy.html" role="button">View Case Study</a>
+                        <a class="btn btn-outline-light" href="casestudy.html" role="button">View Case Study</a>
                 </div>
               </div>
             </div>
@@ -91,7 +91,7 @@
             <div class="cs-item col-lg-4 col-md-12 col-sm-12"> 
               <div class="cs-card">
                 <div class="cs-items">
-                    <img src="/images/Tripconnector.png" class="img-fluid" />
+                    <img src="images/Tripconnector.png" class="img-fluid" />
                       <h3>Post Pandemic Travel App: TripConnector</h3>
                         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor euismod nisi, vitae imperdiet magna aliquet ac. Proin arcu sem, 
                         venenatis dignissim hendrerit id, pharetra eget neque.</p>
@@ -103,7 +103,7 @@
             <div class="cs-item col-lg-4 col-md-12 col-sm-12"> 
               <div class="cs-card">
                 <div class="cs-items">
-                  <img src="/images/FTC.png" class="img-fluid" />
+                  <img src="images/FTC.png" class="img-fluid" />
                     <h3>Government Agency Redesign: FTC</h3>
                       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor euismod nisi, vitae imperdiet magna aliquet ac. Proin arcu sem, 
                       venenatis dignissim hendrerit id, pharetra eget neque.</p>
@@ -162,10 +162,10 @@
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">Copyright&copy;  2022</p>
             <a href="/">
-              <img src="/images/ED-logo.svg">
+              <img src="images/ED-logo.svg">
             </a>
             <ul class="nav col-md-4 justify-content-end">
-              <li class="nav-item"><a href="https://www.linkedin.com/in/ethandebates/"><img src="/images/LinkedIn-mini.png"></a></li>
+              <li class="nav-item"><a href="https://www.linkedin.com/in/ethandebates/"><img src="images/LinkedIn-mini.png"></a></li>
             </ul>
           </footer>
       </div>
