--- a/casestudy.html
+++ b/casestudy.html
@@ -18,14 +18,14 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="images/ED-logo.svg"></a>
-          <button type="button" class="btn btn-dark">Contact</button>
+          <a class="btn btn-dark" href="contact.html" role="button">Contact</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Work</a>
+                <a class="nav-link" href="work.html">Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -244,13 +244,13 @@
 
 <div class="container">
 <p class="text-center">We decided to make the <b>Festa countdown our showstoppper feature,</b> as well as an added image coursel in the hero section. 
-We also began to add features such as apple pay to mobile to give users a more secure checkout</p>
+We also began to add features such as apple pay to mobile to give users a more secure checkout.</p>
 <div class="div">
   <img class="img-fluid" src="images/user-test-desktop.gif">
 </div>
 <p class="text-center">Our user testing focused on making sure the <b>basic tasks of the webpage could be done with ease.</b> Users were asked to navigate through the checkout process and locate 
   information about other Italian clubs, they were all <b>succesful in doing so without asking further questions.</b> We were also able to contact the head of Festa and ask for his 
-  feedback, he expressed that he really liked the new layout but expressed he would need help building the webpage</p>
+  feedback, he expressed that he really liked the new layout but expressed he would need help building the webpage.</p>
 </div>
 
 <div class="container">
@@ -311,12 +311,12 @@ We also began to add features such as apple pay to mobile to give users a more s
 </div>
 
 <div class="text-center">
-  <a class="btn btn-dark btn-lg" href="#" role="button">View Next Case Study</a>
+  <a class="btn btn-dark btn-lg" href="casestudy2.html" role="button">View Previous Case Study</a>
 </div>
 
       <div class="container">
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0 text-muted">Copyright&copy;  2022</p>
+            <p class="col-md-4 mb-0 text-muted">Coded By Ethan, 2022&copy;</p>
             <a href="/">
                 <img src="images/ED-logo.svg">
             </a>
