--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Manrope&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
     <!--
@@ -26,27 +27,20 @@
 
 <body>
 
-    <div class="preLoader">
-    <div class="disc">
-        <img src="images/ED-XL.png">
-    </div>
-    </div>
-
-<div class="webpage">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="images/ED-logo.svg"></a>
-          <button type="button" class="btn btn-dark">Contact</button>
+          <a class="btn btn-dark" href="contact.html" role="button">Contact</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Work</a>
+                <a class="nav-link" href="work.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Skills</a>
@@ -60,61 +54,87 @@
         <div class="container text-left text-lg-left">
           <div class="row">
             <div class="col-lg-8">
-                <h1 class="display-5 fw-bold">Hi I'm Ethan DeBates</h1>
-                  <h2>I am a junior UX/UI designer who is passionate about bringing users expierences that are easily accessible and leave a postive impact.</h2>
+                <h1 class="display-5 fw-bold">Hi, I'm Ethan. 👋</h1>
+                  <h2>An aspiring UX/UI designer passionate about bringing users expierences that are easily accessible and leave a postive impact.</h2>
                     <span class="text-center d-inline-block">
                       <a class="btn btn-dark btn-lg" href="#" role="button">Download Resume</a>
                     </span> 
             </div>
-              <div class="col-lg-4 align-items-center d-flex">
+              <!-- <div class="col-lg-4 align-items-center d-flex">
                 <img src="images/Portrait.png" alt="" class="silly img-fluid">
-              </div>
+              </div> -->
           </div>
           </div>
       </div>
 
-      <div class="container">
-        <div class="row">
-            <h2 class="text-center fw-bold">Projects I've Worked On</h2>
-            <div class="cs-item col-lg-4 col-md-12 col-sm-12"> 
+      <div class="container swag">
+        <div class="row ms-5 me-5">
+            <div class="cs-item col-lg-6 col-md-12 col-sm-12"> 
               <div class="cs-card">
                 <div class="cs-items">
-                  <img src="images/Festa.png" class="img-fluid" />
-                    <h3>Non-profit Webpage Redesign: Festa Italiana</h3>
+                  <img src="images/carMotion.png" class="img-fluid mb-5 mt-5" />
+                </div>
+              </div>
+            </div>
+
+            <div class="cs-item col-lg-6 col-md-12 col-sm-12 text-right"> 
+              <div class="cs-card">
+                <div class="cs-items">
+                    <h3 class="mt-5">Automotive App: Lusso Personal Comfort</h3>
+                      <p> In this final project our group was tasked with creating an application aswell as three page responsive webpage for the app.</p>
+                        <a class="btn btn-outline-light mt-4 mb-5 btn-lg" href="casestudy2.html" role="button">View Case Study</a>
+                </div>
+              </div>
+            </div>
+       </div>
+      </div>
+
+      <div class="container swag">
+        <div class="row ms-5 me-5">
+            <div class="cs-item col-lg-6 col-md-12 col-sm-12"> 
+              <div class="cs-card">
+                <div class="cs-items">
+                  <img src="images/Festa.png" class="img-fluid mb-5 mt-5" />
+                </div>
+              </div>
+            </div>
+
+            <div class="cs-item col-lg-6 col-md-12 col-sm-12 text-right"> 
+              <div class="cs-card">
+                <div class="cs-items">
+                    <h3 class="mt-5">Non-profit Webpage Redesign: Festa Italiana</h3>
                       <p> In this project we focus on a redesign fixing the heuristic issues preventing users from successfully 
                       donating or receiving information regarding Festa Italiana.</p>
-                        <a class="btn btn-outline-light" href="casestudy.html" role="button">View Case Study</a>
+                        <a class="btn btn-outline-light mt-4 mb-5 btn-lg" href="casestudy.html" role="button">View Case Study</a>
                 </div>
               </div>
             </div>
-
-            <div class="cs-item col-lg-4 col-md-12 col-sm-12"> 
-              <div class="cs-card">
-                <div class="cs-items">
-                    <img src="images/Tripconnector.png" class="img-fluid" />
-                      <h3>Post Pandemic Travel App: TripConnector</h3>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor euismod nisi, vitae imperdiet magna aliquet ac. Proin arcu sem, 
-                        venenatis dignissim hendrerit id, pharetra eget neque.</p>
-                        <a class="btn btn-outline-light" href="#" role="button">View Case Study</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="cs-item col-lg-4 col-md-12 col-sm-12"> 
-              <div class="cs-card">
-                <div class="cs-items">
-                  <img src="images/FTC.png" class="img-fluid" />
-                    <h3>Government Agency Redesign: FTC</h3>
-                      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor euismod nisi, vitae imperdiet magna aliquet ac. Proin arcu sem, 
-                      venenatis dignissim hendrerit id, pharetra eget neque.</p>
-                        <a class="btn btn-outline-light" href="#" role="button">View Case Study</a>
-                </div>
-              </div>
-            </div>
-        </div>
+       </div>
       </div>
 
-      <div class="container">
+      <!-- <div class="container swag">
+        <div class="row ms-5 me-5">
+            <div class="cs-item col-lg-6 col-md-12 col-sm-12"> 
+              <div class="cs-card">
+                <div class="cs-items">
+                  <img src="images/Tripconnector.png" class="img-fluid mb-5 mt-5" />
+                </div>
+              </div>
+            </div>
+
+            <div class="cs-item col-lg-6 col-md-12 col-sm-12 text-right"> 
+              <div class="cs-card">
+                <div class="cs-items">
+                    <h3 class="mt-5">Post Pandemic Travel App: Trip Connector</h3>
+                      <p> Coming Soon!</p>
+                        <a class="btn btn-outline-light mt-4 mb-5 btn-lg" href="casestudy.html" role="button">View Case Study</a>
+                </div>
+              </div>
+            </div>
+       </div>
+      </div> -->
+
+      <!-- <div class="container">
         <div class="row">
           <h2 class="text-center fw-bold">My UX Skills</h2>
             <div class="ux-item col-lg-4 col-md-12 col-sm-12">
@@ -135,7 +155,7 @@
               <ul>
                 <li>UX Hypothesis and Problem Statement</li>
                 <li>Feature Prioritization Matrix</li>
-                <li>Value propostions canvas & SWOT Analysis</li>
+                <li>Value Propostion Canvas</li>
                 <li>Competitor Analysis</li>
                 <li>User Scenario and Journey Map</li>
                 <li>Storyboarding</li>
@@ -149,18 +169,18 @@
               <li>User Flow & Sitemap</li>
               <li>Wireframe Sketching and Digital</li>
               <li>Prototyping & Testing</li>
-              <li>Zeplin</li>
+              <li>SWOT Analysis</li>
               <li>Moodboards</li>
               <li>Style Guides</li>
             </ul>
         </div>
       </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="container">
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0 text-muted">Copyright&copy;  2022</p>
+            <p class="col-md-4 mb-0 text-muted">Ethan DeBates / 2023 ✻</p>
             <a href="/">
               <img src="images/ED-logo.svg">
             </a>
@@ -169,7 +189,7 @@
             </ul>
           </footer>
       </div>
-</div>
+
 
 
 
